# mcpcall

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/actions/setup-mcpcall/: action.yml
.github/workflows/: ci.yml  release.yml
crates/mcpcall-core/: Cargo.toml
crates/mcpcall-core/src/: arguments.rs  config.rs  lib.rs  model.rs  output.rs  transport.rs
crates/mcpcall-rmcp/: Cargo.toml
crates/mcpcall-rmcp/src/: lib.rs
docs/: architecture.md
scripts/: install.ps1  install.sh
skills/mcpcall/: SKILL.md
src/: cli.rs  main.rs  mcp.rs  output.rs  values.rs
