[package]
name = "mcpcall"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loonghao/mcpcall"
description = "CLI for listing and calling MCP server tools over stdio or Streamable HTTP."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
http = "1.3"
rmcp = { version = "1.7.0", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
