[package]
name = "mcpcall"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loonghao/mcpcall"
description = "CLI for listing and calling MCP server tools over stdio or Streamable HTTP."

[workspace]
members = ["crates/mcpcall-core", "crates/mcpcall-rmcp"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loonghao/mcpcall"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
http = "1.3"
mcpcall-core = { path = "crates/mcpcall-core" }
mcpcall-rmcp = { path = "crates/mcpcall-rmcp" }
rmcp = { version = "1.7.0", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
reqwest = { version = "0.13.2", default-features = false, features = ["form", "json", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
shell-words = "1.1"
sse-stream = "0.2.3"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
anyhow.workspace = true
clap.workspace = true
mcpcall-core.workspace = true
mcpcall-rmcp.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
