[package]
name = "mcpcall-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core contracts, parsing, and rendering for the mcpcall CLI."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

