[package]
name = "mcpcall-core"
version = "0.4.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core contracts, parsing, and rendering for the mcpcall CLI."

[dependencies]
anyhow.workspace = true
json5.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
